# jsonrpc

./: Cargo.toml  README.md
axum/: Cargo.toml  README.md
axum/src/: lib.rs
axum/src/rpc/: config.rs  mod.rs  rpc.rs  types.rs
client/: Cargo.toml  README.md
client/src/: lib.rs  types.rs
client/src/executor/: reqwest.rs
core/: Cargo.toml  README.md
core/src/: errors.rs  id.rs  lib.rs  request.rs  response.rs
core/src/handler/: agent_ping.rs  mod.rs
core/src/processor/: base.rs  mod.rs  rpc.rs
