[workspace]
resolver = "2"
members = [
    "core",
    "axum", 
    "client"
]

[workspace.package]
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
categories = ["rpc"]
rust-version = "1.77"
license = "GPL-3.0-only"

[workspace.dependencies]
prople-jsonrpc-core = {version = "~0.5", path = "core"}
prople-jsonrpc-client = {version = "~0.2", path = "client"}
prople-jsonrpc-axum = {version = "~0.2", path = "axum"}