[package]
name = "prople-jsonrpc-axum"
version = "1.0.0"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
repository = "https://github.com/prople/jsonrpc/core"
rust-version = "1.74"
description = "A library provides a core of abstraction to working with JSON-RPC"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rst-common = {version = "1.1.0", features = ["standard", "with-errors", "with-tokio", "with-http-tokio", "with-tracing"]}
thiserror = {version = "1.0.57"}
serde = {"version" = "~1", features = ["derive"] }
serde_json = {"version" = "~1"}
prople-jsonrpc-core = {version = "1.0.0", path = "../core"}
