[package]
name = "prople-jsonrpc-core"
version = "0.4.5"
edition = "2021"
authors = ["rstlix0x0 <rstlix.dev@gmail.com>"]
repository = "https://github.com/prople/jsonrpc/core"
rust-version = "1.74"
description = "A library provides a core of abstraction to working with JSON-RPC"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rst-common = {version = "~1", features = ["standard", "with-errors", "with-tokio", "with-logging"]}

[dev-dependencies]
rst-common = {version = "~1", features = ["with-tests"]}
mockall = {version = "~0.12"}
